--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-# defaults file for airflow
+# defaults file for azurecli
 azurecli_python_ver: '3.8'
-azurecli_ver: '2.20.0'
+azurecli_ver: '2.21.0'
