--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ dependencies:
 - conda_env_environment: azurecli-environment.yml
   conda_env_name: azurecli
   role: andrewrothstein.conda-env
-  version: v2.1.3
+  version: v2.1.4
 galaxy_info:
   author: Andrew Rothstein
   company: BlackRock Financial Management
@@ -23,22 +23,17 @@ galaxy_info:
     - all
   - name: Debian
     versions:
+    - bullseye
     - buster
-    - stretch
   - name: EL
     versions:
-    - 7
     - 8
   - name: Fedora
     versions:
-    - 31
-    - 32
-  - name: Gentoo
-    versions:
-    - all
+    - 34
+    - 35
   - name: Ubuntu
     versions:
     - bionic
     - focal
-    - xenial
   role_name: azurecli
